--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth; /* Habilita el desplazamiento suave */
+    scroll-behavior: smooth; /*desplazamiento suave*/
 }
 
 /* Variables */
