--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 html {
-  scroll-behavior: smooth; /* Habilita el desplazamiento suave */
+  scroll-behavior: smooth; /*desplazamiento suave*/
 }
 
 /* Variables */
